@@ -64,5 +64,6 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 046 ==> 293897 : Sony A350 (alpha 350) camera detected, but no import posible.
 047 ==> 237552 : Thumbnails generation process for selected images only.
 048 ==> 231777 : Scrolling in Albumview should be smoothed.
-049 ==> 
+049 ==> 282907 : No items are displayed when I enable 'Include Album Sub-Tree' in a folder containing one image and many folders.
+050 ==> 
 
